Added class Player and enmum QuestionType