@@ -2,33 +2,36 @@ package kamil.kus.trivia;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
-import java.util.List;
 
-public class Game implements Trivia {
-    List<String> players = new ArrayList<>();
+public class Game implements Trivia{
+    ArrayList players = new ArrayList();
     int[] places = new int[6];
     int[] purses = new int[6];
     boolean[] inPenaltyBox = new boolean[6];
 
-    List<String> popQuestions = new ArrayList<>();
-    List<String> scienceQuestions = new ArrayList<>();
-    List<String> sportsQuestions = new ArrayList<>();
-    List<String> rockQuestions = new ArrayList<>();
+    LinkedList popQuestions = new LinkedList();
+    LinkedList scienceQuestions = new LinkedList();
+    LinkedList sportsQuestions = new LinkedList();
+    LinkedList rockQuestions = new LinkedList();
 
     int currentPlayer = 0;
     boolean isGettingOutOfPenaltyBox;
 
     public Game() {
         for (int i = 0; i < 50; i++) {
-            popQuestions.add("Pop Question " + i);
-            scienceQuestions.add(("Science Question " + i));
-            sportsQuestions.add(("Sports Question " + i));
-            rockQuestions.add(createRockQuestion(i));
+            popQuestions.addLast("Pop Question " + i);
+            scienceQuestions.addLast(("Science Question " + i));
+            sportsQuestions.addLast(("Sports Question " + i));
+            rockQuestions.addLast(createRockQuestion(i));
         }
     }
 
     public String createRockQuestion(int index) {
         return "Rock Question " + index;
+    }
+
+    public boolean isPlayable() {
+        return (howManyPlayers() >= 2);
     }
 
     public boolean add(String playerName) {
@@ -85,21 +88,27 @@ public class Game implements Trivia {
     }
 
     private void askQuestion() {
-        if (currentCategory().equals("Pop"))
-            System.out.println(popQuestions.remove(0));
-        if (currentCategory().equals("Science"))
-            System.out.println(scienceQuestions.remove(0));
-        if (currentCategory().equals("Sports"))
-            System.out.println(sportsQuestions.remove(0));
-        if (currentCategory().equals("Rock"))
-            System.out.println(rockQuestions.remove(0));
+        if (currentCategory() == "Pop")
+            System.out.println(popQuestions.removeFirst());
+        if (currentCategory() == "Science")
+            System.out.println(scienceQuestions.removeFirst());
+        if (currentCategory() == "Sports")
+            System.out.println(sportsQuestions.removeFirst());
+        if (currentCategory() == "Rock")
+            System.out.println(rockQuestions.removeFirst());
     }
 
 
     private String currentCategory() {
-        if (places[currentPlayer] % 4 == 0) return "Pop";
-        if (places[currentPlayer] % 4 == 1) return "Science";
-        if (places[currentPlayer] % 4 == 2) return "Sports";
+        if (places[currentPlayer] == 0) return "Pop";
+        if (places[currentPlayer] == 4) return "Pop";
+        if (places[currentPlayer] == 8) return "Pop";
+        if (places[currentPlayer] == 1) return "Science";
+        if (places[currentPlayer] == 5) return "Science";
+        if (places[currentPlayer] == 9) return "Science";
+        if (places[currentPlayer] == 2) return "Sports";
+        if (places[currentPlayer] == 6) return "Sports";
+        if (places[currentPlayer] == 10) return "Sports";
         return "Rock";
     }
 
